styles.css
* {
    font-size: 90%;
    box-sizing: border-box;   
}

body {
    font-family: 'Graphik Trial', sans-serif;
    letter-spacing: normal;
    line-height: 1.5rem;
}

.header {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    margin-top: 2.5rem;
}

h1 {
    margin: 0;
    font-family: 'Pacifico', cursive;
    margin-right: 0.5%;
    font-size: 3rem;
    color: #27333f;
    transition: color 0.3s;
}

h1:hover {
    color: darkviolet;
}

.container {
    border-radius: 1%;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0% auto;
    width: 60%;
}

.input-container {
    margin-top: 8%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 80%;
}

input {
    border: 1px solid #ccc;
    outline: none;
    padding: 1rem;
    width: 80%;
    font-size: 1.2rem;
    border-radius: 0.5rem;
}

button {
    background-color: darkviolet;
    color: white;
    border: none;
    cursor: pointer;
    transition: background-color 0.3s;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-left: 1%;
    width: 20%;
    padding: 1%;
    font-size: 1rem;
    border-radius: 0.5rem;
}

button:hover {
    background-color: indigo;
}

.magic-ball-container {
    margin-top: 3%;
    display: flex;
    flex-direction: column;
}

.magic-ball-result:before {
    content: '8';
    display: block;
    font-size: 10rem;
    font-weight: bold;
    color: black;
    background-color: #fff;
    border: 2px solid #fff;
    border-radius: 50%;
    width: 10rem;
    height: 10rem;
    text-align: center;
    line-height: 10rem;
}

.magic-ball-result.show-number:before {
    display: block; 
}

.magic-ball-result.reset:before,
.magic-ball-result:not(.show-number):before {
    display: none;
}

.magic-ball-result {
    font-family: 'Digital-7', sans-serif;
    width: 28rem;
    height: 28rem;
    background-color: black;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    font-size: 2em;
    font-weight: bold;
    color: white;
    box-shadow: 0 0 5rem rgba(128, 121, 121, 0.5);
    padding: 5%;
}

.magic-ball-result:hover {
    background-color: darkviolet; 
}

.user-question {
    margin-top: 3%;
    width: 80%;
    font-size: 1rem;
}

@media only screen and (max-width: 425px) {

    h1 {
        font-size: 1.5rem;
    }

    .container {
        padding: 5% 0;
        width: 100%;
    }

    .input-container {
        flex-direction: column;
    }

    input {
        width: auto;
        font-size: 1rem;
    }

    button {
        width: 100%;
        height: 3rem;
        margin-top: 3%;
    }

    .user-question {
        font-size: 0.8rem;
    }

    .magic-ball-result {
        width: 15rem;
        height: 15rem;
        font-size: 0.9rem;
    }
}

